급식 부분과 로봇소개 수정

--- a/index.html
+++ b/index.html
@@ -380,14 +380,14 @@
                                 
                             </div>
                             <div class="mt-1 text-center">
-                                <h4 class="font-bold text-base text-gray-800 mb-2">Bambu lab 3D printer</h4>
+                                <h4 class="font-bold text-base text-gray-800 mb-2">3D printer</h4>
                             </div>
                         </div>
                     </div>
 
                     <!-- AI·SW 방과후학교 보유 장비 및 작품 -->
                     <div class="text-center mb-12 fade-in">
-                        <h3 class="text-xl font-bold gradient-text mb-6">우리가 보유한 로봇들과 3D 프린터 작품들</h3>
+                        <h3 class="text-xl font-bold gradient-text mb-6">우리가 보유한 로봇, 3D 프린터 작품</h3>
                         <div class="max-w-4xl mx-auto">
                             <div class="group cursor-pointer" onclick="openImageModal('images/ai_sw_robots.jpg', '서대전여고 보유 로봇 및 3D 프린터 작품')">
                                 <div class="relative rounded-2xl shadow-lg overflow-hidden bg-gradient-to-br from-indigo-100 to-purple-100 hover:shadow-xl transition-all duration-300 hover:transform hover:-translate-y-1">
@@ -415,7 +415,7 @@
                     <!-- AI·SW 교육의 특별함 -->
                     <div class="bg-white/70 backdrop-blur-lg p-8 rounded-3xl shadow-2xl border border-white/20">
                         <div class="text-center mb-8">
-                            <h3 class="text-2xl font-bold gradient-text mb-3">AI·SW 방과후학교의 특별함</h3>
+                            <h3 class="text-2xl font-bold gradient-text mb-3">AI·SW 방과후학교의 장점</h3>
                             <p class="text-gray-600">미래 인재가 되기 위한 핵심 역량을 기르는 네 가지 포인트</p>
                         </div>
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
@@ -556,7 +556,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 fade-in">
                     <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">자랑하고 싶은 우리 학교 급식</h2>
-                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">영양과 맛을 모두 잡은 서대전여고의 명품 급식!<br>매일매일이 기대되는 점심시간은<br>학업 스트레스를 날려주는 최고의 활력소입니다.</p>
+                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">🍽️ <strong>맛집보다 맛있는 우리 학교 급식!</strong> 🍽️<br>매일 바뀌는 다채로운 메뉴와 정성스러운 조리로<br><strong>점심시간이 하루 중 가장 행복한 시간</strong>이 됩니다!</p>
                 </div>
 
                 <div class="fade-in">
