로봇 사진 레이아웃 변경

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-purple-100">
             <a href="#curriculum" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">너의 미래</a>
             <a href="#clubs" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">동아리 활동</a>
-            <a href="#ai-sw" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">AI·SW 방과후</a>
+            <a href="#ai-sw" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">AI·SW 방과후학교</a>
             <a href="#places" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">학교 공간</a>
             <a href="#meals" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">학교 급식</a>
             <a href="#news" class="block py-3 px-6 text-base font-semibold hover:bg-gradient-to-r hover:from-purple-50 hover:to-transparent transition">뉴스</a>
@@ -389,11 +389,11 @@
                     <div class="text-center mb-12 fade-in">
                         <h3 class="text-xl font-bold gradient-text mb-6">우리가 보유한 로봇, 3D 프린터 작품</h3>
                         <div class="max-w-4xl mx-auto">
-                            <div class="group cursor-pointer" onclick="openImageModal('images/ai_sw_robots.jpg', '서대전여고 보유 로봇 및 3D 프린터 작품')">
-                                <div class="relative rounded-2xl shadow-lg overflow-hidden bg-gradient-to-br from-indigo-100 to-purple-100 hover:shadow-xl transition-all duration-300 hover:transform hover:-translate-y-1">
-                                    <img src="images/ai_sw_robots.jpg" 
+                            <div class="group cursor-pointer" onclick="openImageModal('images/ai_sw_robots-light.jpg', '서대전여고 보유 로봇 및 3D 프린터 작품')">
+                                <div class="relative rounded-2xl shadow-lg overflow-hidden bg-gradient-to-br from-indigo-100 to-purple-100 hover:shadow-xl transition-all duration-300 hover:transform hover:-translate-y-1 ai-sw-robots-container">
+                                    <img src="images/ai_sw_robots-light.jpg" 
                                          alt="서대전여고 보유 로봇 및 3D 프린터 작품" 
-                                         class="w-full h-64 md:h-80 object-cover group-hover:scale-105 transition-transform duration-300"
+                                         class="w-full h-64 md:h-80 object-contain group-hover:scale-105 transition-transform duration-300"
                                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                     <div class="absolute inset-0 flex items-center justify-center text-8xl bg-gradient-to-br from-indigo-100 to-purple-100" style="display: none;">
                                         🤖
