모바일에 맞게 글 내용 수정

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="curriculum" class="py-20 bg-gradient-to-b from-blue-50 to-indigo-50 relative">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 fade-in">
-                    <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">정해진 답이 아닌, 너만의 길을 그리는 곳</h2>
+                    <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">정해진 답이 아닌, <br>너만의 길을 그리는 곳</h2>
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">“스스로 미래를 만들어가는 서대전여고”</p>
 
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">
@@ -88,8 +88,8 @@
                         <h3 class="text-2xl font-bold mb-4 gradient-text">맞춤형 교육과정</h3>
                         <p class="text-gray-600 leading-relaxed">
                             인문, 사회, 자연, 공학, 예체능까지!<br>
-                            좋아 하는 과목을 직접 고르고 조합하며,<br>
-                            너의 꿈에 가까워지는 하루를 만들어가요.<br>                            
+                            좋아하는 과목을 직접 고르고 조합하며,<br>
+                            너의 꿈을 위한 하루를 만들어가요.<br>                            
                         </p>
                         <p class="text-gray-600 leading-relaxed font-bold">
                             너만의 시간표로 미래를 디자인해봐요.
@@ -99,7 +99,7 @@
                         <div class="text-6xl mb-6 floating" style="animation-delay: 0.2s;">🔬</div>
                         <h3 class="text-2xl font-bold mb-4 gradient-text">과학중점학급 운영</h3>
                         <p class="text-gray-600 leading-relaxed">
-                            심화 과학실험부터 과제연구, R&E 활동까지!<br>
+                            심화 과학실험, 과제연구, R&E 활동까지!<br>
                             이공계열 진로를 꿈꾸는 학생들을 위해,<br>
                             전문적이고 체계적인 프로그램이 준비되어 있어요.<br>
                          </p>
@@ -452,22 +452,22 @@
                             <div class="ai-feature group">
                                 <div class="text-5xl mb-4 floating">🧠</div>
                                 <h4 class="text-lg font-bold mb-3 gradient-text">문제 해결 실습</h4>
-                                <p class="text-gray-600 text-sm leading-relaxed">새로운 시각으로 생각하고<br>직접 문제를 풀어요.</p>
+                                <p class="text-gray-600 text-sm leading-relaxed">새로운 시각으로 생각하고 직접 문제를 풀어요.</p>
                             </div>
                             <div class="ai-feature group">
                                 <div class="text-5xl mb-4 floating" style="animation-delay: 0.2s;">🤖</div>
                                 <h4 class="text-lg font-bold mb-3 gradient-text">로봇 체험</h4>
-                                <p class="text-gray-600 text-sm leading-relaxed">로봇을 만지고 조작하며<br>실습으로 재밌게 배워요.</p>
+                                <p class="text-gray-600 text-sm leading-relaxed">로봇을 만지고 조작하며 실습으로 재밌게 배워요.</p>
                             </div>
                             <div class="ai-feature group">
                                 <div class="text-5xl mb-4 floating" style="animation-delay: 0.4s;">💻</div>
                                 <h4 class="text-lg font-bold mb-3 gradient-text">코딩 경험</h4>
-                                <p class="text-gray-600 text-sm leading-relaxed">로봇을 직접 움직이며<br>코딩의 재미를 느껴요.</p>
+                                <p class="text-gray-600 text-sm leading-relaxed">로봇을 직접 움직이며 코딩의 재미를 느껴요.</p>
                             </div>
                             <div class="ai-feature group">
                                 <div class="text-5xl mb-4 floating" style="animation-delay: 0.6s;">🚀</div>
                                 <h4 class="text-lg font-bold mb-3 gradient-text">AI 탐구 활동</h4>
-                                <p class="text-gray-600 text-sm leading-relaxed">AI의 원리를 배우고,<br>미래 기술을 직접 체험해요.</p>
+                                <p class="text-gray-600 text-sm leading-relaxed">AI의 원리를 배우고, 미래 기술을 직접 체험해요.</p>
                             </div>
                         </div>
                     </div>
@@ -480,7 +480,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 fade-in">
                     <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">서대전여고의 특별한 공간들</h2>
-                    <p class="text-gray-600 text-lg font-bold">"배우고, 쉬고, 함께 웃는 순간들이 머무는 곳"</p>
+                    <p class="text-gray-600 text-lg font-bold">"배우고, 쉬고, 즐거운 곳"</p>
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">학습과 휴식, 소통이 어우러진<br>서대전여고의 아름다운 공간들.<br>지금부터 하나씩 소개할게요.</p>
                 </div>
 
@@ -712,7 +712,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 fade-in">
                     <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">뉴스로 알아보는 서대전여고</h2>
-                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">교육으로 증명하고, 이야기로 빛나는 서대전여고!<br>언론이 주목한 그 특별한 순간들을 만나보세요.</p>
+                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">언론이 먼저 알아본 서대전여고!<br>지금, 그 이야기를 만나보세요.</p>
                 </div>
 
                 <div class="fade-in">
