--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section class="py-20 bg-gradient-to-b from-purple-50 to-blue-50">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16 fade-in">
-                    <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">서대전여고는 언제나 너를 환영해!
+                    <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">꿈을 찾아가는 너를 환영해!
                     </h2>
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">“꿈을 향한 첫걸음, 우리와 함께 시작해봐”</p>
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">
