메인 타이틀 캘리 변경

--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
         <!-- Hero Section -->
         <section class="hero-bg min-h-screen flex items-center justify-center text-center">
             <div class="container mx-auto px-6 py-20">
-                <img src="logo/sdj-logo2.png" alt="서대전여자고등학교 로고" class="h-20 md:h-32 lg:h-40 mb-6 fade-in mx-auto">
-                <h1 class="text-4xl md:text-6xl lg:text-7xl font-black hero-text mb-6 fade-in">서대전여고에서, <br>너의 가장 빛나는 색을 찾아봐!</h1>
-                <p class="text-lg md:text-2xl text-white/90 mb-10 fade-in font-medium" style="animation-delay: 0.2s;">꿈을 향한 너의 모든 가능성이 이곳에서 시작될거야</p>
+                <img src="images/main_title2.png" alt="서대전여자고등학교 타이틀" class="w-full max-w-4xl md:max-w-6xl lg:max-w-7xl h-auto mb-6 fade-in mx-auto drop-shadow-2xl filter brightness-110 contrast-110">
+                <p class="text-base md:text-lg lg:text-xl text-white mb-10 fade-in font-semibold drop-shadow-lg" style="animation-delay: 0.2s;">꿈을 향한 너의 모든 가능성이 이곳에서 시작될거야</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center fade-in" style="animation-delay: 0.4s;">
                     <button class="bg-gradient-to-r from-red-500 to-pink-500 text-white font-bold py-4 px-10 rounded-full shadow-2xl hover:shadow-3xl transition-all duration-300 text-lg hover:from-red-600 hover:to-pink-600">학교 생활 웹툰 🎨</button>
                 </div>
@@ -885,7 +884,7 @@
             <div class="absolute bottom-0 right-0 w-96 h-96 bg-blue-500 rounded-full filter blur-3xl"></div>
         </div>
         <div class="container mx-auto px-6 text-center relative z-10">
-            <h3 class="text-3xl md:text-4xl font-black mb-4">서대전여고에서,<br>너의 꿈을 펼쳐봐!</h3>
+            <img src="images/end_title.png" alt="서대전여자고등학교 타이틀" class="w-full max-w-2xl md:max-w-4xl lg:max-w-5xl h-auto mb-4 fade-in mx-auto">
             <p class="mb-8 text-lg text-gray-300">더 자세한 학교 생활이 궁금하다면<br>공식 블로그를 방문해주세요.</p>
             <button onclick="window.open('https://m.blog.naver.com/PostList.naver?blogId=sdjh_school&tab=1&trackingCode=blog_bloghome', '_blank')" class="btn-gradient text-white font-bold py-4 px-10 rounded-full shadow-2xl hover:shadow-3xl transition-all duration-300 text-lg mb-8">학교 공식 블로그 바로가기</button>
             <div class="mt-12 pt-8 border-t border-white/20">
