메인 타이틀 크기 변경

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- Hero Section -->
         <section class="hero-bg min-h-screen flex items-center justify-center text-center">
             <div class="container mx-auto px-6 py-20">
-                <img src="images/main_title2.png" alt="서대전여자고등학교 타이틀" class="w-full max-w-4xl md:max-w-6xl lg:max-w-7xl h-auto mb-6 fade-in mx-auto drop-shadow-2xl filter brightness-110 contrast-110">
+                <img src="images/main_title.png" alt="서대전여자고등학교 타이틀" class="w-full max-w-2xl md:max-w-4xl lg:max-w-5xl h-auto mb-6 fade-in mx-auto drop-shadow-2xl filter brightness-110 contrast-110">
                 <p class="text-base md:text-lg lg:text-xl text-white mb-10 fade-in font-semibold drop-shadow-lg" style="animation-delay: 0.2s;">꿈을 향한 너의 모든 가능성이 이곳에서 시작될거야</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center fade-in" style="animation-delay: 0.4s;">
                     <button class="bg-gradient-to-r from-red-500 to-pink-500 text-white font-bold py-4 px-10 rounded-full shadow-2xl hover:shadow-3xl transition-all duration-300 text-lg hover:from-red-600 hover:to-pink-600">학교 생활 웹툰 🎨</button>
