--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     
     <main>
         <!-- Hero Section -->
-        <section class="hero-bg min-h-screen flex items-center justify-center text-center">
-            <div class="container mx-auto px-6 py-20">
+        <section class="hero-bg min-h-[90vh] flex items-center justify-center text-center">
+            <div class="container mx-auto px-6 py-8">
                 <img src="images/main_title.png" alt="서대전여자고등학교 타이틀" class="w-full max-w-2xl md:max-w-4xl lg:max-w-5xl h-auto mb-6 fade-in mx-auto drop-shadow-2xl filter brightness-110 contrast-110">
                 <p class="text-base md:text-lg lg:text-xl text-white mb-10 fade-in font-semibold drop-shadow-lg" style="animation-delay: 0.2s;">꿈을 향한 너의 모든 가능성이 이곳에서 시작될거야</p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center fade-in" style="animation-delay: 0.4s;">
@@ -73,15 +73,15 @@
                 <div class="text-center mb-16 fade-in">
                     <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">꿈을 찾아가는 너를 환영해!
                     </h2>
-                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">“꿈을 향한 첫걸음, 우리와 함께 시작해봐”</p>
+                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">"꿈을 향한 첫걸음, 우리와 함께 시작해봐"</p>
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">
                         배우고, 웃고, 함께 성장하는 곳. <br>
                         지금, 서대전여고를 만나봐!
                     </p>
                 </div>
                 
-                <div class="fade-in max-w-4xl mx-auto">
-                    <div class="relative w-full rounded-2xl overflow-hidden shadow-2xl bg-white p-4">
+                <div class="fade-in max-w-3xl mx-auto">
+                    <div class="relative w-full rounded-xl overflow-hidden shadow-lg bg-white/80 backdrop-blur-sm p-1">
                         <div class="relative w-full" style="padding-bottom: 56.25%; height: 0;">
                             <iframe 
                                 class="absolute top-0 left-0 w-full h-full rounded-lg" 
