메인 내용 변경

--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
             <div class="container mx-auto px-6 py-8">
                 <img src="images/main_title.png" alt="서대전여자고등학교 타이틀" class="w-full max-w-2xl md:max-w-4xl lg:max-w-5xl h-auto mb-6 fade-in mx-auto drop-shadow-2xl filter brightness-110 contrast-110">
                 <p class="text-base md:text-lg lg:text-xl text-white mb-10 fade-in font-semibold drop-shadow-lg" style="animation-delay: 0.2s;">꿈을 향한 너의 모든 가능성이 이곳에서 시작될거야</p>
-                <div class="flex flex-col sm:flex-row gap-4 justify-center items-center fade-in" style="animation-delay: 0.4s;">
-                    <button class="bg-gradient-to-r from-red-500 to-pink-500 text-white font-bold py-4 px-10 rounded-full shadow-2xl hover:shadow-3xl transition-all duration-300 text-lg hover:from-red-600 hover:to-pink-600">학교 생활 웹툰 🎨</button>
-                </div>
             </div>
         </section>
 
@@ -108,7 +105,7 @@
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">“스스로 미래를 만들어가는 서대전여고”</p>
 
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">
-                        서대전여고는 고교학점제 선도학교예요.<br>
+                        서대전여고는 고교학점제에 충실한 학교예요.<br>
                         네가 선택한 과목과 다양한 프로그램으로 배우며,<br>
                         관심 분야를 깊이 공부할 수 있어요.<br>
                         우리학교에서 너의 잠재력을 펼쳐봐요.
@@ -129,7 +126,7 @@
                     </div>
                     <div class="curriculum-card">
                         <div class="text-6xl mb-6 floating" style="animation-delay: 0.2s;">🔬</div>
-                        <h3 class="text-2xl font-bold mb-4 gradient-text">과학중점학급 운영</h3>
+                        <h3 class="text-2xl font-bold mb-4 gradient-text">과학중점 프로그램 운영</h3>
                         <p class="text-gray-600 leading-relaxed">
                             심화 과학실험, 과제연구, R&E 활동까지!<br>
                             이공계열 진로를 꿈꾸는 학생들을 위해,<br>
