--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="relative w-full" style="padding-bottom: 56.25%; height: 0;">
                             <iframe 
                                 class="absolute top-0 left-0 w-full h-full rounded-lg" 
-                                src="https://www.youtube.com/embed/CJIO_8OQbxY?si=AoC8QNsGMVHjClZg" 
+                                src="https://www.youtube.com/embed/DgK1vflbHTE?si=yuLqBNk-_r5D5H7r" 
                                 title="서대전여고 홍보영상" 
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -346,7 +346,11 @@
                 <div class="text-center mb-16 fade-in">
                     <h2 class="text-2xl md:text-5xl font-black gradient-text mb-4">AI·SW 방과후학교</h2>
                     <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg font-bold">"미래를 선도하는 AI와 SW교육"</p>
-                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">AI 전문가 선생님이 가르쳐주는<br>쉽고 재미있는 방과후학교</p>
+                    <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">
+                        AI 전문가 선생님이 가르쳐주는<br>
+                        쉽고 재미있는 방과후학교<br>
+                        어떤 로봇인지 궁금해? 눌러봐!
+                    </p>
                 </div>
 
                 <div class="fade-in">
