동아리 소개 및 Q&A 변경

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
                         <div class="club-card science bg-gradient-to-br from-green-100 to-emerald-100 p-6 rounded-2xl shadow-lg border-2 border-white hover:shadow-xl transition-all duration-300">
                             <div class="text-3xl mb-3">🔬</div>
                             <h4 class="font-bold text-green-800 text-lg mb-2">더 셀</h4>
-                            <p class="text-sm text-green-700 leading-relaxed">생명과학 실험부터 영화 감상, 포스터 만들기까지 다양하게 해요!</p>
+                            <p class="text-sm text-green-700 leading-relaxed">심화 실험(PCR, 전기영동, 세균배양, DNA 추출 등)을 통해 진짜 생명과학을 경험할 수 있는 곳! 그리고 생명과학의 진로를 준비할 수 있는 동아리에요.
+                            </p>
                         </div>
                         <div class="club-card science bg-gradient-to-br from-purple-100 to-indigo-100 p-6 rounded-2xl shadow-lg border-2 border-white hover:shadow-xl transition-all duration-300">
                             <div class="text-3xl mb-3">🧬</div>
@@ -843,7 +844,7 @@
                             <span class="faq-arrow text-2xl md:text-3xl font-light transform transition-transform text-purple-600">+</span>
                         </button>
                         <div class="faq-answer hidden p-4 md:p-8 pt-0 text-gray-600 text-sm md:text-lg leading-relaxed">
-                            <p><strong class="gradient-text">A.</strong> 공부 잘하는 친구들이 많은 건 사실이지만, 그만큼 면학 분위기가 잘 조성되어 있다는 뜻이기도 해요. 서로 질문하고 알려주면서 함께 성장하는 분위기예요. 선생님들도 열정적으로 가르쳐주시고, 방과후 수업이나 심화반 프로그램이 잘 되어 있어서 따라가기 어렵지 않을 거예요!</p>
+                            <p><strong class="gradient-text">A.</strong> 열심히 하면 충분히 좋은 성적을 거둬갈 수 있는 학교예요. 선생님들의 열정적인 지도와 면학 분위기가 좋아서, 성적이 올라가는 친구들도 많아요.</p>
                         </div>
                     </div>
                 </div>
