서대전여고 주제곡 추가

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <path fill-rule="evenodd" d="M9.383 3.076A1 1 0 0110 4v12a1 1 0 01-1.617.816L4.846 13H2a1 1 0 01-1-1V8a1 1 0 011-1h2.846l3.537-3.816a1 1 0 011.617.816zM16 8a2 2 0 11-4 0 2 2 0 014 0z" clip-rule="evenodd"></path>
                 </svg>
                 <div>
-                    <p class="text-xs font-semibold">🎵 BGM 시작</p>
-                    <p class="text-xs opacity-90">우측 버튼 클릭 →</p>
+                    <p class="text-xs font-semibold">🎵 서대전여자고등학교 주제가 듣기</p>
+                    <p class="text-xs opacity-90">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;오른쪽 재생 버튼 클릭! 👉 </p>
                 </div>
             </div>
             <button onclick="document.getElementById('mobile-bgm-guide').style.display='none'" class="text-white/80 hover:text-white p-1 ml-2">
