교육과정 편성표 이름 변경

--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@
             <!-- 모달 헤더 -->
             <div class="flex-shrink-0 bg-gradient-to-r from-purple-600 to-pink-600 text-white p-4 md:p-6 flex justify-between items-center border-b-2 border-purple-300">
                 <h2 class="text-lg md:text-2xl font-bold bg-gradient-to-r from-white to-purple-100 bg-clip-text text-transparent">
-                    📚 서대전여고 입학생 교육과정 편성표
+                    서대전여고 입학생 교육과정 편성표
                 </h2>
                 <button onclick="closeCurriculum()" 
                         class="bg-gradient-to-r from-purple-700 to-pink-700 hover:from-purple-800 hover:to-pink-800 text-white rounded-full w-10 h-10 md:w-12 md:h-12 flex items-center justify-center text-xl md:text-2xl font-bold shadow-lg hover:shadow-xl transition-all duration-200 border-2 border-white/20"
