학부모 안심 메시지 변경

--- a/index.html
+++ b/index.html
@@ -472,12 +472,12 @@
                 <!-- 학부모 안심 메시지 -->
                 <div class="text-center mt-16 fade-in">
                     <div class="bg-gradient-to-r from-green-600 to-emerald-600 rounded-3xl p-8 md:p-12 text-white shadow-2xl">
-                        <h3 class="text-2xl md:text-3xl font-bold mb-6">학부모님, 안심하세요!</h3>
+                        <h3 class="text-2xl md:text-3xl font-bold mb-6">학부모님, 안심하세요 💚</h3>
                         <p class="text-lg md:text-xl leading-relaxed max-w-4xl mx-auto">
-                            서대전여자고등학교는 <strong>5년간 학교폭력 제로</strong>라는 놀라운 기록을 보유하고 있습니다.<br>
-                            이는 전국적으로도 매우 드문 성과로, 우리 학교가 얼마나 <strong>안전하고 건전한 교육환경</strong>을 제공하는지 보여줍니다.<br>
-                            <span class="text-green-200 font-semibold">소중한 자녀를 안심하고 맡겨주세요!</span>
-                        </p>
+                          최근 5년간 <strong>학교폭력 ‘0건’</strong>.<br>
+                          서대전여고는 아이들이 서로를 존중하며 성장하는<br>
+                          <strong>안전하고 따뜻한 배움터</strong>입니다.
+                        </p>                        
                     </div>
                 </div>
             </div>
