25년도 뉴스로 변경

--- a/index.html
+++ b/index.html
@@ -1118,11 +1118,12 @@
 
                 <div class="fade-in">
                     <div class="max-w-4xl mx-auto">
-                        <div class="news-item group cursor-pointer bg-white rounded-3xl shadow-2xl overflow-hidden hover:shadow-3xl transition-all duration-300 hover:transform hover:-translate-y-2" onclick="window.open('https://m.blog.naver.com/PostView.naver?blogId=sdjh_school&logNo=223548981157&navType=by', '_blank')">
-                            <div class="relative">
-                                <img src="images/sdj_news.jpg" 
+                        <div class="news-item group cursor-pointer bg-white rounded-3xl shadow-2xl overflow-hidden hover:shadow-3xl transition-all duration-300 hover:transform hover:-translate-y-2" onclick="window.open('https://m.blog.naver.com/PostView.naver?blogId=sdjh_school&logNo=224056303141&navType=by', '_blank')">
+                            <div class="relative aspect-[3/2] overflow-hidden">
+                                <img src="images/scenery/scenery_0.JPG" 
                                      alt="서대전여고 뉴스 기사" 
-                                     class="w-full h-64 md:h-80 object-cover group-hover:scale-105 transition-transform duration-300"
+                                     class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
+                                     loading="lazy"
                                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                                 <div class="absolute inset-0 flex items-center justify-center text-6xl bg-gradient-to-br from-blue-100 to-indigo-100" style="display: none;">
                                     📰
@@ -1139,14 +1140,18 @@
                             </div>
                             <div class="p-8">
                                 <h3 class="text-2xl font-bold text-gray-800 mb-4 group-hover:text-purple-600 transition-colors">
-                                    [기획] 서대전여고, 실력으로 증명하는 대전의 명문 사학 발돋움
+                                    [기획] 맞춤형 컨설팅으로 생기부 완성··· '나의 꿈에 가깝게'
                                 </h3>
-                                <p class="text-gray-600 text-lg leading-relaxed mb-4">
-                                    다양한 교과 연계 활동으로 매년 86% 이상의 높은 대학진학률을 달성하며, 바른 인성을 갖추고 새로운 가치를 창출하는 창의융합형 인재를 양성하고 있습니다.
+                                <p class="text-gray-800 text-base leading-relaxed mb-4">
+                                    <span class="text-purple-400 font-extrabold text-xl">글로벌감성 갖춘 여성리더 키운다</span><br>
+                                    대입환경 맞춰 학생역량 극대화<br>
+                                    맞춤형 진로진학 시스템 구축<br>
+                                    교사 자발적 TF로 생기부 관리<br>
+                                    AI 교육 해외학교 교류도 활발
                                 </p>
                                 <div class="flex items-center justify-between text-sm text-gray-500">
-                                    <span>데일리한국</span>
-                                    <span>2024.08.15</span>
+                                    <span>중도일보</span>
+                                    <span>2025.10.17</span>
                                 </div>
                             </div>
                         </div>
