기사 내용 변경

--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,7 @@
                                     대입환경 맞춰 학생역량 극대화<br>
                                     맞춤형 진로진학 시스템 구축<br>
                                     교사 자발적 TF로 생기부 관리<br>
-                                    AI 교육 해외학교 교류도 활발
+                                    AI 교육·해외학교 교류도 활발
                                 </p>
                                 <div class="flex items-center justify-between text-sm text-gray-500">
                                     <span>중도일보</span>
